2007-06-19  Christian Faulhammer  <opfer@gentoo.org>

	* put keywords from -java and -misc in separate classes so they
	are properly ordered
	* added keywords for versionator eclass

2007-06-18  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode, eselect-mode): Use mapcar for
	font-lock keyword assignments.

2007-06-18  Christian Faulhammer  <opfer@gentoo.org>

	* added keywords for:
	pam, git, cvs, subversion, multilib, autotools, rpm, mercurial,
	alternatives, java-ant-2, java-utils-2, fdo-mime,
	bash-completion, gnome2-utils
	* reordered keywords for:
	eutils

2007-06-11  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode, eselect-mode): Do not quote faces.

2007-06-11  Christian Faulhammer  <opfer@gentoo.org>

	* added missing quotes in eselect highlighting

2007-06-08  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode, eselect-mode): Use
	write-contents-hooks instead of write-file-functions for Emacs 21
	and XEmacs compatibility. Move call of font-lock-add-keywords out
	of function definition.

2007-06-07  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-map): Fix key definition.
	(ebuild-run-command): Use compile instead of start-process;
	inspired by ebuild-mode-marienz.el.
	(auto-mode-alist): Add elements for ebuild-mode and eselect-mode.

2007-06-06  Ulrich Mueller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-commands-alist): New variable.
	(ebuild-mode-run-command): Function reworked. Use completing-read
	for completion of commands.
	(ebuild-mode-map): Define sparse keymap.
	(ebuild-mode-commands-elisp): elisp-emacs-major-version replaced
	by elisp-emacs-version.

2007-06-01  Christian Faulhammer  <opfer@gentoo.org>

	* added elisp-emacs-major-version() and elisp-make-autoload-file()
	to highlighted keywords in elisp group

	* renamed command groups 0 to sandbox and 1 to eclass to reflect
	their offspring in the name

2007-05-26  Ulrich Mueller  <ulm@gentoo.org>

	* Makefile: New file.
